[workspace]
resolver = "2"
members = ["client", "hashbench", "mediator", "mediator-proto", "npwire","server", "transport", "udt", "udt-example", "udt-sys", "ui", "ui/src-tauri", "util"]

[workspace.dependencies]
util.path = "./util"
npwire.path = "./npwire"

anyhow = "1"
bytes = "1.10"
bytestring = "1.4"
crossbeam = "0.8"
futures = "0.3"
libutp-rs2 = "0.1"
pin-project = "1.1"
rand = "0.9"
thiserror = "2"
tokio = "1.47"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
range-set = "0.0.13"