[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
util.workspace = true
npwire.workspace = true

anyhow.workspace = true
bytes.workspace = true
bytestring.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true