[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
util.workspace = true
npwire.workspace = true

anyhow.workspace = true
async-trait.version = "0.1"
bytes.workspace = true
bytestring.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "time"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
local-ip-address = "0.6.5"
udt.path = "../udt"
mediator-proto.path = "../mediator-proto"
transport = { workspace = true, optional = true }
parking_lot = "0.12"
console-subscriber = "0.4"

[features]
default = ["secure-transport"]
secure-transport = ["dep:transport"]