[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
util.workspace = true
npwire.workspace = true

anyhow.workspace = true
bytes.workspace = true
bytestring.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "net", "io-util", "fs", "full", "tracing"] }
tokio-util = { workspace = true, features = ["net"] }
futures.workspace = true
pin-project.workspace = true

console-subscriber = "0.4"
cfg-if = "1"