[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
util.workspace = true
npwire.workspace = true

anyhow.workspace = true
bytes.workspace = true
bytestring.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "fs", "full", "tracing"] }
tokio-util = { workspace = true, features = ["net"] }
tokio-stream = "0.1"
futures.workspace = true
pin-project.workspace = true
rand.workspace = true
udt.path = "../udt"
mediator-proto.path = "../mediator-proto"
local-ip-address = "0.6.5"
transport.path = "../transport"

# console-subscriber = "0.4"
tracing-subscriber = "0.3"
cfg-if = "1"
tonic = "0.14"
ctrlc = "3.4"