[package]
name = "udt-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1"
scc.workspace = true
bitflags = "2.9"
md-5 = "0.11.0-rc.0"
tokio = { version = "1.47", default-features = false, features = ["sync"] }
util.workspace = true
range-set.workspace = true

[build-dependencies]
cxx-build = "1"