[package]
name = "udt"
version = "0.1.0"
edition = "2024"

[dependencies]
udt-sys = { path = "../udt-sys" }
os_socketaddr = "0.2"
tokio = { workspace = true, features = ["rt"] }
futures = "0.3"
cfg-if = "1"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["ws2def"] }